Add excessive activity query and refactor code for improved readability