@@ -2,9 +2,7 @@ package com.scholario.course.resolver;
 
 import com.scholario.book.model.Book;
 import com.scholario.course.dto.CourseMaterialResponse;
-import com.scholario.course.dto.CourseResponse;
 import com.scholario.course.model.Course;
-import com.scholario.course.model.CourseMaterial;
 import com.scholario.course.service.CourseService;
 import org.springframework.graphql.data.method.annotation.Argument;
 import org.springframework.graphql.data.method.annotation.QueryMapping;
@@ -13,7 +11,6 @@ import org.springframework.stereotype.Controller;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Controller
 @PreAuthorize("isAuthenticated()")
@@ -39,7 +36,7 @@ public class CourseQueryResolver {
     public List<CourseMaterialResponse> getCourseMaterials(@Argument Long courseId) {
         return courseService.getCourseMaterials(courseId).stream()
                 .map(CourseMaterialResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @QueryMapping
